# midi_glockenspiel

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml
main/app/: main.c  midi_io.c  solenoid.c
main/include/: esp_midi_define.h  midi_io.h  midi_parser.h  solenoid.h
